# Google_Calendar_and_Slack_MCP_W_LangGraph

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
src/base_agent/: graph.py  prompts.py
