[project]
name = "base-agent"
version = "0.0.1"
description = "Starter template for making a custom Reasoning and Action agent (using tool calling) in LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain>=0.2.14",
    "langchain-google-vertexai>=2.0.24",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "httpx>=0.25.0",
    "langchain-community>=0.2.0",
    "faiss-cpu>=1.7.0",
    "unstructured[md]>=0.10.0",
    "langchain_openai",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth",
    "google-auth-httplib2",
    "google-oauth2-tool",
    "python-dateutil",
    "pydantic[email]",
    "fastmcp==1.0",
    "langchain_mcp_adapters",
    "google-api-python-client"
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "fastapi",
    "uvicorn[standard]",
    "python-dateutil",
    "pydantic[email]",

]


[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.6.1",
    "langgraph-cli[inmem]>=0.2.10",
    "pytest>=8.3.5"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["base_agent"]
package-dir = {"" = "src"}


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"